prj/force-app/main/default/objects/Candidato__c/Candidato__c.object-meta.xml
<CustomObject>
    <description>Um candidato é uma pessoa que foi convidada para participar dos jogos mas ainda não aceitou.</description>
    <label>Candidato</label>
    <nameField>
        <label>Candidato Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidatos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>