prj/force-app/main/default/objects/Candidato__c/fields/DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataNascimento__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Data de nascimento do candidato de acordo de acordo com a certidão de nascimento</description>
    <inlineHelpText>Data de nascimento do candidato de acordo de acordo com a certidão de nascimento</inlineHelpText>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>