prj/force-app/main/default/objects/Candidato__c/fields/Escolaridade__c.field-meta.xml
<CustomField>
    <fullName>Escolaridade__c</fullName>
    <description>Identifica o grau de escolaridade do candidato</description>
    <inlineHelpText>Identifica o grau de escolaridade do candidato</inlineHelpText>
    <label>Escolaridade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não alfabetizado</fullName>
            </value>
            <value>
                <fullName>Primeiro/Segundo grau completo</fullName>
            </value>
            <value>
                <fullName>Graduação ou Pós cursando ou completo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>