prj/force-app/main/default/objects/Candidato__c/fields/Idade__c.field-meta.xml
<CustomField>
    <fullName>Idade__c</fullName>
    <description>Idade do candidato. (Não considera o ano bisexto)</description>
    <formula>(TODAY() -  DataNascimento__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Idade do candidato.</inlineHelpText>
    <label>Idade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>