prj/force-app/main/default/objects/Candidato__c/fields/Pontuacao__c.field-meta.xml
<CustomField>
    <fullName>Pontuacao__c</fullName>
    <description>Mede a probabilidade do candidato em aceitar a proposta e sua agressividade.</description>
    <formula>IF( Presidiario__c, 1, 0.6) + (-0.3 * ( ABS ( Idade__c - 40 ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mede a probabilidade do candidato em aceitar a proposta e sua agressividade.</inlineHelpText>
    <label>Pontuação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>