prj/force-app/main/default/objects/Candidato__c/fields/Presidiario__c.field-meta.xml
<CustomField>
    <fullName>Presidiario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica se o candidato é ou já cumpriu medida de restrição de liberdade imposta pelo Estado.</description>
    <inlineHelpText>Identifica se o candidato é ou já cumpriu medida de restrição de liberdade imposta pelo Estado.</inlineHelpText>
    <label>Presidiario</label>
    <type>Checkbox</type>
</CustomField>